package com.abbys.tms.data.tasks.entity;

public enum TaskPriority {
    LOW,
    MEDIUM,
    HIGH
}
