package com.abbys.tms.data.tasks.entity;

public enum TaskStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    CANCELED,
}
