package com.abbys.tms.data.user.entity;

public enum Role {
    ROLE_ADMIN,
    ROLE_MANAGER,
    ROLE_EMPLOYEE
}
