---
config:
  layout: elk
---
classDiagram

    %% --- ENUMERATIONS ---
    class Role {
        <<enumeration>>
        ADMIN
        MANAGER
        EMPLOYEE
    }

    class TaskStatus {
        <<enumeration>>
        PENDING
        IN_PROGRESS
        COMPLETED
        CANCELED
    }

    class TaskPriority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    %% --- ENTITIES ---
    class User {
        +Long id
        +String name
        +String email
        +String password
        +Role role
        +Boolean enabled
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
    }

    class Task {
        +Long id
        +String title
        +String description
        +TaskStatus status
        +TaskPriority priority
        +LocalDateTime dueDate
        +Integer version
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
    }

    class Comment {
        +Long id
        +String content
        +LocalDateTime createdAt
    }

    class TaskHistory {
        +Long id
        +TaskStatus oldStatus
        +TaskStatus newStatus
        +LocalDateTime changedAt
    }

    %% --- UNIDIRECTIONAL RELATIONSHIPS ---
    %% Arrow points TO the class being referenced (the one that is known)
    
    Task "0..*" --> "1" User : created_by
    Task "0..*" --> "1" User : assigned_to
    
    Comment "0..*" --> "1" Task : belongs_to
    Comment "0..*" --> "1" User : written_by
    
    TaskHistory "0..*" --> "1" Task : records_changes_for
    TaskHistory "0..*" --> "1" User : performed_by